Fix horizontal scroll.

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@ body, html {
 }
 
 .visualization-title {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   width: 100%;
   background-color: #C9E4FF;
   color: black;
